--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
   /**
    * colors
    */
-
+  --red: hsl(0, 95%, 38%);
   --spanish-gray: hsl(0, 0%, 60%);
   --sonic-silver: hsl(0, 0%, 47%);
   --eerie-black: hsl(0, 0%, 13%);
@@ -851,7 +851,7 @@ body::-webkit-scrollbar-thumb:hover { background: hsl(0, 0%, 70%); }
 }
 
 .banner-subtitle {
-  color: var(--salmon-pink);
+  color: var(--red);
   font-size: var(--fs-7);
   font-weight: var(--weight-500);
   text-transform: capitalize;
@@ -860,7 +860,7 @@ body::-webkit-scrollbar-thumb:hover { background: hsl(0, 0%, 70%); }
 }
 
 .banner-title {
-  color: var(--eerie-black);
+  color: var(--white);
   font-size: var(--fs-1);
   text-transform: uppercase;
   line-height: 1;
@@ -870,7 +870,7 @@ body::-webkit-scrollbar-thumb:hover { background: hsl(0, 0%, 70%); }
 .banner-text { display: none; }
 
 .banner-btn {
-  background: var(--salmon-pink);
+  background: var(--red);
   color: var(--white);
   width: -webkit-max-content;
   width: -moz-max-content;
@@ -890,97 +890,38 @@ body::-webkit-scrollbar-thumb:hover { background: hsl(0, 0%, 70%); }
 
 
 
-
-
-/*-----------------------------------*\
-  #CATEGORY
-\*-----------------------------------*/
-
-.category { margin-bottom: 30px; }
-
-.category-item-container {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
-  gap: 10px;
-  overflow: auto hidden;
-  -webkit-scroll-snap-type: inline mandatory;
-      -ms-scroll-snap-type: inline mandatory;
-          scroll-snap-type: inline mandatory;
-  overscroll-behavior-inline: contain;
+.presentacion-text {
+  color: black;
+  font-size: 35px;
+  font-weight: var(--weight-500);
+  font-family: "Times New Roman";
+  letter-spacing: 0.4px;
+  margin: 0 auto;
+  padding: 70px;
+  background-color: var(--salmon-pink);
+  border-radius: 10px 20px 30px 40px;
 }
 
-.category-item {
-  min-width: 100%;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
-  gap: 10px;
-  padding: 15px;
-  border: 1px solid var(--cultured);
-  -webkit-border-radius: var(--border-radius-md);
-          border-radius: var(--border-radius-md);
-  scroll-snap-align: start;
+.materiales {
+  font-family: "Times New Roman";
+  line-height: 1.6;
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: pink;
+  border-radius: 10px 20px 30px 40px;
+  
 }
 
-.category-img-box {
-  background: var(--cultured);
-  border: 1px solid hsl(0, 0%, 80%);
-  padding: 10px;
-  -webkit-border-radius: var(--border-radius-sm);
-          border-radius: var(--border-radius-sm);
+h1, h2 {
+  color: #333;
 }
 
-.category-content-box { width: 100%; }
-
-.category-content-flex {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-  -webkit-justify-content: space-between;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
+.parrafo{
+  list-style-type: none;
+  padding: 0;
   margin-bottom: 10px;
 }
-
-.category-item-title {
-  color: var(--eerie-black);
-  font-size: var(--fs-9);
-  font-weight: var(--weight-600);
-  text-transform: uppercase;
-}
-
-.category-item-amount {
-  color: var(--sonic-silver);
-  font-size: var(--fs-11);
-}
-
-.category-btn {
-  color: var(--salmon-pink);
-  font-size: var(--fs-9);
-  font-weight: var(--weight-500);
-  text-transform: capitalize;
-}
-
-
-
-
 
 /*-----------------------------------*\
   #SIDEBAR
